--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Portfolio of Mostafa Essam , a Data Analyst specializing in Python, SQL, and Power BI. Explore my projects and experience.">
-  <title>Mustafa Essam Elnabarawy | Data Analyst Portfolio</title>
+  <title>Mustafa Elnabarawy | Data Analyst Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -62,7 +62,7 @@
                </div>
         </div>
                 <div class="profile-card">
-                   <img src="C:\portfolio\images\photo.jpeg" style="border:2px solid rgb(4, 4, 7)" alt="Profile picture of Mostafa Essam, Data Analyst">
+                   <img src="images\photo.jpeg" style="border:2px solid rgb(4, 4, 7)" alt="Profile picture of Mostafa Essam, Data Analyst">
                 </div>
          </div>
     </div>
@@ -75,13 +75,13 @@
       </div>
       <div class="skills-content">
                 <div class="skill-item">
-             <img src="C:\portfolio\images\python.png" alt="Python" class="skill-icon">
+             <img src="images\python.png" alt="Python" class="skill-icon">
             <h3>Python</h3>
           <p>Pandas , Matplotlib</p>
         </div>
 
         <div class="skill-item">
-             <img src="C:\portfolio\images\sql.png" alt="SQL" class="skill-icon">
+             <img src="images\sql.png" alt="SQL" class="skill-icon">
             <h3>SQL</h3>
           <p>SQL Server </p>
           <p> (Queries – Joins Aggregation – Creating Tables) </p>
@@ -98,18 +98,18 @@
         <div class="skill-item">
              <img src="C:\portfolio\images\excel.jpg" alt="Excel" class="skill-icon">
              <h3>Excel</h3>
-          <p>Advanced, Power Query, PivotTables</p>
-          <p>Advanced Level, Power Query, PivotTables, Power Pivot</p>
+          <p>Advanced  Power Query, PivotTables</p>
+          <p>Advanced Level  Power Query, PivotTables, Power Pivot</p>
         </div>
        
         <div class="skill-item">
-            <img src="C:\portfolio\images\stsa.png" alt="Statistics" class="skill-icon">
+            <img src="images\stsa.png" alt="Statistics" class="skill-icon">
              <h3>Statistics</h3>
           <p>For Data Analysis</p>
         </div>
         
         <div class="skill-item">
-                <img src="C:\portfolio\images\off.jpg" alt="MS Office" class="skill-icon">
+                <img src="images\off.jpg" alt="MS Office" class="skill-icon">
             <h3>MS Office</h3>
           <p>Word, PowerPoint, Outlook , Access</p>
         </div>
@@ -146,7 +146,7 @@
 
        <div id="projectsGrid">
           <div class="project-image">
-            <img src="C:\portfolio\images\powerbi.png" style="border:2px solid rgb(4, 4, 7)" alt="Sales Dashboard">
+            <img src="images\powerbi.png" style="border:2px solid rgb(4, 4, 7)" alt="Sales Dashboard">
           </div>
  <div class="project-content">
             <h3>Sales Data Analysis: From Raw Data to Actionable Insights</h3>
@@ -166,7 +166,7 @@
 
         <div id="projectsGrid">
           <div class="project-image">
-            <img src="C:\portfolio\images\pi.png" style="border:2px solid rgb(4, 4, 7)" alt="Sales Dashboard">
+            <img src="images\pi.png" style="border:2px solid rgb(4, 4, 7)" alt="Sales Dashboard">
           </div>
  <div class="project-content">
             <h3>Sales Data Analysis: From Raw Data to Actionable Insights</h3>
@@ -182,7 +182,7 @@
 
 <div id="projectsGrid">
           <div class="project-image">
-            <img src="C:\portfolio\images\dp.png" style="border:2px solid rgb(4, 4, 7)" alt="Sales Dashboard">
+            <img src="images\dp.png" style="border:2px solid rgb(4, 4, 7)" alt="Sales Dashboard">
           </div>
  <div class="project-content">
             <h3>Sales Data Analysis: From Raw Data to Actionable Insights</h3>
@@ -265,8 +265,6 @@
     </div>
   </div>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-  <script src="script.js"></script>
-
 </body>
 </html>
+
