--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
         </div>
 
         <div class="skill-item">
-            <img src="C:\portfolio\images\bi.png" alt="Power BI" class="skill-icon">
+            <img src="images\bi.png" alt="Power BI" class="skill-icon">
             <h3>Power BI</h3>
           <p>Advanced</p>
           <p>Dax</p>
         </div>
 
         <div class="skill-item">
-             <img src="C:\portfolio\images\excel.jpg" alt="Excel" class="skill-icon">
+             <img src="images\excel.jpg" alt="Excel" class="skill-icon">
              <h3>Excel</h3>
           <p>Advanced  Power Query, PivotTables</p>
           <p>Advanced Level  Power Query, PivotTables, Power Pivot</p>
@@ -267,4 +267,5 @@
 
 </body>
 </html>
+
 
